<resources>
    <string name="app_name">UsersCollection</string>
    <string name="firstname">firstname</string>
    <string name="lastname">lastname</string>
    <string name="age">Age:</string>
    <string name="email">Email:</string>
    <string name="city">City:</string>
    <string name="country">Country:</string>
    <string name="see_next_user">See next user</string>
    <string name="add_this_user_to_collection">Add this user to collection</string>
    <string name="view_collection">View Collection</string>
    <string name="error">error</string>
    <string name="user_avatar">User Avatar</string>
    <string name="users">Users</string>
</resources>